# llm-for-python-developers

./: .gitignore  Dockerfile  README.MD  main.py  pyproject.toml  requirements.txt
app/: dependencies.py
app/api/: __init__.py  analyze_text.py  chat.py  items.py  rag_agent.py
app/config/: deepseek_llm.py  embedding_model.py  logger.py  rag_prompt.py  small_model.py
app/db/vector_store/: chroma_store.py
app/enum/: knowledge_level.py
app/listeners/: __init__.py  llm_listener.py
app/rag/: rag_pipeline.py
app/rag/data_ingestion/: knowledge_base_loader.py  md_processor.py  pdf_processor.py  ragas_dataset_generator.py
app/schemas/: chat_request.py  chat_response.py
app/services/: ai_service_factory.py  chat_service.py  chat_with_rag_service.py  knowledge_level_analysis_service.py  query_analysis_service.py  query_optimizer_service.py
app/utils/: __init__.py  id_util.py  keyword_extractor.py  str_util.py
data/prompts/: keyword_extraction_prompt.txt  multi_query_trial_prompt.txt  optimize_rag_query_prompt.txt  rag_prompt_zh.txt
data/raw_data/: 异步通信P1—消息队列基本概念.md  异步通信P2—Kafka与消息.md
doc/system design/: 个人知识库分析系统设计.md
doc/system design/detailed design/: 1.RAG评估.md  10.后处理Post-processing.md  2.数据摄取.md  3.向量数据库.md  4.上下文设计.md
doc/system design/detailed design/RAG/: 0.RAG评估.md  1.数据摄取.md
doc/system design/detailed design/对话与上下文工程/: 1.接口参数解析与设计.md  2.prompt处理设计.md  3.会话历史设计.md  4.对话风险管理.md
doc/system design/detailed design/对话与上下文工程/DS和QW对话入参与响应/: DeepSeek对话请求.json  通义千问对话请求返回.txt
doc/system design/detailed design/对话传输设计/DS和QW对话入参与响应/: DeepSeek完整对话.txt  DeepSeek对话请求返回.txt  通义千问完整对话.txt  通义千问对话请求.json
doc/system design/sequence/: 消息保存.puml
scripts/: check_device.py  count_effective_lines.py  download_model.py  load_md_to_chroma.py
scripts/evaluation/: chunk_simple_evaluation.py  evaluate_prompt.py  evaluation_dataset.py  optimizer_prompt_evaluation.py  ragas_eval_dataset.jsonl  user_def.py
tests/: check_env.py  env_test.py  generate_id_test.py  ragas_test.py
tests/services/: test_query_analysis_service.py
tests/utils/: test_keyword_extractor.py
